update instance to plain method usage
