# src/domain/rentals/rentals.controller.ts
@@ -1,5 +1,4 @@
 import { Body, Controller, Post } from '@nestjs/common';
-import { instanceToPlain } from 'class-transformer';
 import { RentalsService } from './rentals.service';
 
 @Controller('rentals')
@@ -7,28 +6,19 @@ export class RentalsController {
   constructor(private readonly rentalsService: RentalsService) {}
 
   @Post()
-  async create(
+  create(
     @Body('bikerId') bikerId: string,
     @Body('bikeSerial') bikeSerial: string,
     @Body('dockSerial') dockSerial: string,
   ) {
-    const rental = await this.rentalsService.create(
-      bikerId,
-      dockSerial,
-      bikeSerial,
-    );
-    return instanceToPlain(rental);
+    return this.rentalsService.create(bikerId, bikeSerial, dockSerial);
   }
 
   @Post('/return')
-  async postReturn(
+  postReturn(
     @Body('bikeSerial') bikeSerial: string,
     @Body('dockSerial') dockSerial: string,
   ) {
-    const rental = await this.rentalsService.registerReturn(
-      bikeSerial,
-      dockSerial,
-    );
-    return instanceToPlain(rental);
+    return this.rentalsService.registerReturn(bikeSerial, dockSerial);
   }
 }
