# swagger.json
@@ -21,7 +21,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object"
+                  "$ref": "#/components/schemas/Biker"
                 }
               }
             }
@@ -92,7 +92,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object"
+                  "$ref": "#/components/schemas/Biker"
                 }
               }
             }
@@ -180,7 +180,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object"
+                  "$ref": "#/components/schemas/Rental"
                 }
               }
             }
@@ -201,7 +201,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "type": "object"
+                  "$ref": "#/components/schemas/Rental"
                 }
               }
             }
@@ -292,6 +292,334 @@
           "password",
           "confirmationPassword",
           "creditCard"
+        ]
+      },
+      "CreditCard": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "creditCardNumber": {
+            "type": "string"
+          },
+          "holderName": {
+            "type": "string"
+          },
+          "expirationDate": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "creditCardNumber",
+          "holderName",
+          "expirationDate"
+        ]
+      },
+      "Passport": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "passportNumber": {
+            "type": "string"
+          },
+          "countryCode": {
+            "type": "string"
+          },
+          "expirationDate": {
+            "format": "date-time",
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "passportNumber",
+          "countryCode",
+          "expirationDate"
+        ]
+      },
+      "Station": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "stationSerial": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "location": {
+            "type": "string"
+          },
+          "docks": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Dock"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "stationSerial",
+          "name",
+          "location",
+          "docks"
+        ]
+      },
+      "Dock": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "dockSerial": {
+            "type": "string"
+          },
+          "model": {
+            "type": "string"
+          },
+          "manufactureDate": {
+            "format": "date-time",
+            "type": "string"
+          },
+          "status": {
+            "type": "string",
+            "enum": [
+              "OPERATIONAL",
+              "AVAILABLE",
+              "OCCUPIED",
+              "MAINTENANCE_REQUESTED",
+              "UNDER_MAINTENANCE",
+              "DECOMMISSIONED"
+            ]
+          },
+          "bike": {
+            "$ref": "#/components/schemas/Bike"
+          },
+          "station": {
+            "$ref": "#/components/schemas/Station"
+          },
+          "rentals": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Rental"
+            }
+          },
+          "returns": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Rental"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "dockSerial",
+          "model",
+          "manufactureDate",
+          "status"
+        ]
+      },
+      "Bike": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "bikeSerial": {
+            "type": "string"
+          },
+          "brand": {
+            "type": "string"
+          },
+          "model": {
+            "type": "string"
+          },
+          "manufactureYear": {
+            "type": "number"
+          },
+          "status": {
+            "type": "string",
+            "enum": [
+              "NEW",
+              "AVAILABLE",
+              "RENTED",
+              "MAINTENANCE_REQUESTED",
+              "UNDER_MAINTENANCE",
+              "RETIRED"
+            ]
+          },
+          "dock": {
+            "$ref": "#/components/schemas/Dock"
+          },
+          "rentals": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Rental"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "bikeSerial",
+          "brand",
+          "model",
+          "manufactureYear",
+          "status"
+        ]
+      },
+      "Rental": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "startedAt": {
+            "format": "date-time",
+            "type": "string"
+          },
+          "finishedAt": {
+            "format": "date-time",
+            "type": "string",
+            "nullable": true
+          },
+          "biker": {
+            "$ref": "#/components/schemas/Biker"
+          },
+          "bike": {
+            "$ref": "#/components/schemas/Bike"
+          },
+          "rentedFromDock": {
+            "$ref": "#/components/schemas/Dock"
+          },
+          "retunedToDock": {
+            "nullable": true,
+            "allOf": [
+              {
+                "$ref": "#/components/schemas/Dock"
+              }
+            ]
+          },
+          "initialCharge": {
+            "$ref": "#/components/schemas/Charge"
+          },
+          "extraCharge": {
+            "$ref": "#/components/schemas/Charge"
+          }
+        },
+        "required": [
+          "id",
+          "startedAt",
+          "finishedAt",
+          "biker",
+          "bike",
+          "rentedFromDock",
+          "retunedToDock",
+          "initialCharge"
+        ]
+      },
+      "Biker": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "cpf": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "birthDate": {
+            "format": "date-time",
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          },
+          "status": {
+            "enum": [
+              "PENDING",
+              "ACTIVE"
+            ],
+            "type": "string"
+          },
+          "creditCard": {
+            "$ref": "#/components/schemas/CreditCard"
+          },
+          "passport": {
+            "$ref": "#/components/schemas/Passport"
+          },
+          "charges": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Charge"
+            }
+          },
+          "rentals": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Rental"
+            }
+          }
+        },
+        "required": [
+          "id",
+          "name",
+          "birthDate",
+          "email",
+          "password",
+          "status",
+          "creditCard",
+          "charges",
+          "rentals"
+        ]
+      },
+      "Charge": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "requestedAt": {
+            "format": "date-time",
+            "type": "string"
+          },
+          "completedAt": {
+            "format": "date-time",
+            "type": "string",
+            "nullable": true
+          },
+          "amount": {
+            "type": "number",
+            "default": 10
+          },
+          "biker": {
+            "$ref": "#/components/schemas/Biker"
+          },
+          "rental": {
+            "$ref": "#/components/schemas/Rental"
+          },
+          "extra": {
+            "$ref": "#/components/schemas/Rental"
+          }
+        },
+        "required": [
+          "id",
+          "requestedAt",
+          "completedAt",
+          "amount",
+          "biker",
+          "rental",
+          "extra"
         ]
       },
       "UpdateBikerDto": {
